# msbuild

./: Cargo.toml
.github/workflows/: ci.yml  release.yml
examples/: main.rs
src/: lib.rs  vs_where.rs  win_sdk.rs
tests/: test_msbuild.rs  test_vswhere.rs
