[package]
name = "msbuild"
version = "0.2.1"
edition = "2021"
description = "Allows builds to run msbuild for visual studio projects"
license = "MIT"
repository = "https://github.com/uglyoldbob/msbuild"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.115"
lenient_semver = { version = "0.4.2", features = ["version_lite"] }
winreg = { version = "0.55" }

[dev-dependencies]
tempfile = "3.19.1"

[features]
has-vs2022 = []
has-vs2026 = []
